# solar-system

./: .dockerignore  .gitignore  .travis.yml  Dockerfile  LICENSE  README.md  asset-manifest.json  config-overrides.js  go.mod  go.sum  go.work  go.work.sum  index.html  next.config.ts  package-lock.json  package.json  precache-manifest.1d2339757f1c4294426c23393e964ef7.js  precache-manifest.2ceb40564d7f333ed10f614b77cff939.js  precache-manifest.99bde9160f2c3a8516da7b1b9b08a747.js  requirements.txt  service-worker.js  tsconfig.json
.github/workflows/: asteroids-pipeline-build.yml  asteroids-update.yml  deploy-asteroids.yml  deploy-docker.yml  deploy.yml  docker-build.yml  get-asteroids-and-deploy.yml
app/: client.tsx  config-overrides.js  manifest.json  package-lock.json  package.json
app/public/: index.html
app/src/: Interface.js  Orbit.js  Scene.js  index.css  index.js  index.tsx
assets/: graphics.pptx
asteroids/: get_asteroids.py  get_small_bodies.py  get_small_bodies_mpc.py
astro/: requirements.txt  static.py
astro/asteroids/: field_options.csv  get_small_bodies.py  get_small_bodies_jpl.py  get_small_bodies_mpc.py  luigi_workflow.py  schema.json  test.py
astro/bright_stars/: bright_stars.csv  process.py  schema.json
astro/planets/: colours.json  elements_to_json.py  planetary_elements.csv  planetary_elements.json  process.py
bright_stars/: bright_stars.csv  process.py
css/: main.css
doc/: documentation.aux  documentation.tex  documentation.toc
js/: jquery-csv.js  main.js  test1.js
pipeline/: main.go
pipeline/asteroids/: asteroids.go  asteroids_test.go  go.mod  go.sum  mpcorb.go  (+5 more)
proto/: asteroids.proto  bright_stars.proto  run_protoc.sh
public/: index.html  manifest.json
rust/: Cargo.toml
rust/benches/: benches.rs
rust/src/: asteroids.rs  lib.rs  utils.rs
scripts/: get-asteroids-and-build.sh
web/: next.config.ts  package-lock.json  package.json  tsconfig.json  wrangler.jsonc
(+110 files in other folders)
