[package]
name = "solar_system"
version = "0.1.0"
authors = ["Alex Kennedy <apkennedy@me.com>"]
repository = "https://github.com/alex-kennedy/solar-system"
description = "Rust packages for github.com/alex-kennedy/solar-system"
license = "MIT"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"
js-sys = "0.3.45"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
criterion = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[[bench]]
name = "benches"
harness = false
